Fix fade-in on Firefox
fade out was fine, but fade in was just a delay and then a cut

--- a/src/components/OSDComponents/lower-thirds.css
+++ b/src/components/OSDComponents/lower-thirds.css
@@ -39,7 +39,7 @@ div.lower-third-visible {
   -o-transition: 1.0s;
   transition: 1.0s;
   opacity: 0;
-  visibility: hidden;
+  visibility: visible;
   padding: 0;
   margin: 0;
 }
